--- a/TelegramBot/package.json
+++ b/TelegramBot/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon whatsapp.js"
+    "start": "nodemon whatsapp.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongodb": "^6.13.0",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "whatsappbot": "file:"
   }
 }
